[gd_scene load_steps=5 format=3 uid="uid://mvafher5yr07"]

[ext_resource type="Script" uid="uid://dacus34yfqhht" path="res://addons/hyh.digression/editor/controls/ConditionControl.gd" id="1_elv8o"]
[ext_resource type="Texture2D" uid="uid://bta3jvd470c36" path="res://addons/hyh.digression/icons/icon_close.svg" id="3_hasyr"]
[ext_resource type="PackedScene" uid="uid://b46vwf6pxf1tl" path="res://addons/hyh.digression/editor/controls/expressions/OperatorExpression.tscn" id="3_slwmy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6p1j"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_right = 3
border_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[node name="ConditionControl" type="MarginContainer"]
theme_override_constants/margin_right = 20
script = ExtResource("1_elv8o")

[node name="SetConditionButton" type="LinkButton" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.364706, 0.882353, 1)
theme_override_font_sizes/font_size = 14
text = "Set condition..."

[node name="Condition" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Condition"]
layout_mode = 2
text = "if "

[node name="PC" type="PanelContainer" parent="Condition"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x6p1j")

[node name="MC" type="MarginContainer" parent="Condition/PC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 3

[node name="ConditionExpression" parent="Condition/PC/MC" instance=ExtResource("3_slwmy")]
layout_mode = 2
type = 1

[node name="ClearButton" type="Button" parent="Condition"]
layout_mode = 2
tooltip_text = "Clear the condition"
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
icon = ExtResource("3_hasyr")
flat = true

[connection signal="pressed" from="SetConditionButton" to="." method="_on_set_condition_button_pressed"]
[connection signal="modified" from="Condition/PC/MC/ConditionExpression" to="." method="_on_condition_expression_modified"]
[connection signal="size_changed" from="Condition/PC/MC/ConditionExpression" to="." method="_on_condition_expression_size_changed"]
[connection signal="pressed" from="Condition/ClearButton" to="." method="_on_clear_button_pressed"]
